--- a/package.json
+++ b/package.json
@@ -2,26 +2,34 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "tailscale",
   "title": "Tailscale",
-  "description": "List devices in your Tailnet and copy the IPv4, IPv6, or web address to your clipboard.",
+  "description": "List devices in your Tailnet and copy the IPv4, IPv6, or MagicDNS address to your clipboard.",
   "icon": "command-icon.png",
   "author": "samlinville",
   "categories": [
     "Developer Tools",
-    "Web",
+    "Applications",
+    "System",
     "Security"
   ],
   "license": "MIT",
   "commands": [
     {
-      "name": "index",
-      "title": "List Tailnet devices",
-      "description": "Template for showing a static list and a detail view",
+      "name": "devices",
+      "title": "Network Devices",
+      "subtitle": "Tailscale",
+      "description": "View any device connected to your Tailnet and quickly copy an address to your clipboard",
+      "mode": "view"
+    },
+    {
+      "name": "admin",
+      "title": "Admin Console",
+      "subtitle": "Tailscale",
+      "description": "Open the Tailscale Admin Console",
       "mode": "view"
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.31.0",
-    "rss-parser": "^3.12.0"
+    "@raycast/api": "^1.31.0"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
