add images and changelog file

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "description": "List devices in your Tailnet and copy the IPv4, IPv6, or MagicDNS address to your clipboard.",
   "icon": "command-icon.png",
   "author": "samlinville",
+  "contributors": [
+    "samlinville"
+  ],
   "categories": [
     "Developer Tools",
     "Applications",
