--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
       "mode": "view"
     },
     {
-      "name": "users",
+      "name": "account-switcher",
       "title": "Switch account",
       "subtitle": "Tailscale",
       "description": "View logged-in Tailscale accounts and quickly switch between them",
